name:                rlog
version:             0.1
synopsis:            Minimal blog
homepage:            https://github.com/jimenezrick/rlog
author:              Ricardo Catalinas Jiménez <jimenezrick@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >= 1.8

executable rlog
  main-is:           Main.hs
  build-depends:     base                  == 4.6.*,
                     text                  == 0.11.*,
                     mtl                   == 2.1.*,
                     containers            == 0.5.*,
                     filepath              == 1.3.*,
                     directory             == 1.2.*,
                     pandoc                == 1.11.*,
                     pandoc-types          == 1.10.*,
                     wai-extra             == 1.3.*,
                     wai-middleware-static == 0.3.*,
                     scotty                == 0.4.*,
                     blaze-html            == 0.6.*
