name:                rlog
version:             0.1
synopsis:            Minimalist blog engine
homepage:            https://github.com/jimenezrick/rlog
author:              Ricardo Catalinas Jiménez <jimenezrick@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >= 1.8

Flag Static
  Default:           False

executable rlog
  if flag(Static)
    ghc-options:     -Wall -O2 -threaded -rtsopts -static
                     -optc-static -optl-static -optl-pthread
  else
    ghc-options:     -Wall -O2 -threaded -rtsopts
  main-is:           Main.hs
  build-depends:     base                  == 4.6.*,
                     text                  == 0.11.*,
                     mtl                   == 2.1.*,
                     containers            == 0.5.*,
                     data-default          == 0.5.*,
                     filepath              == 1.3.*,
                     directory             == 1.2.*,
                     pandoc                == 1.11.*,
                     pandoc-types          == 1.10.*,
                     scotty                == 0.4.*,
                     wai-extra             == 1.3.*,
                     wai-middleware-static == 0.3.*,
                     blaze-html            == 0.6.*
