name:                rlog
version:             0.2.0.0
synopsis:            Minimalist blog engine
homepage:            https://github.com/jimenezrick/rlog
author:              Ricardo Catalinas Jiménez <jimenezrick@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >= 1.8

Flag Static
  Default:           False

executable rlog
  if flag(static)
    ghc-options:     -Wall -O2 -threaded -rtsopts -static
                     -optc-static -optl-static -optl-pthread
  else
    ghc-options:     -Wall -O2 -threaded -rtsopts
  main-is:           Main.hs
  build-depends:     base,
                     bytestring,
                     text,
                     mtl,
                     containers,
                     data-default,
                     filepath,
                     directory,
                     pandoc                == 1.13.*,
                     pandoc-types,
                     scotty                == 0.9.*,
                     wai-extra,
                     wai-middleware-static,
                     blaze-html
